fix extra scrollbar brought by Tracert

--- a/@antv/gatsby-theme-antv/site/global.less
+++ b/@antv/gatsby-theme-antv/site/global.less
@@ -48,3 +48,12 @@ html {
     }
   }
 }
+
+iframe[src="https://tracert.alipay.com/cross.html"] {
+  width: 1px;
+  height: 1px;
+  position: absolute;
+  left: -100px;
+  bottom: -100px;
+  display: none;
+}
